# Clunk

./: .gitignore  CMakeLists.txt  Clunk.sln
.kdev4/: Clunk.kdev4
ClunkEngine/: CMakeLists.txt
ClunkEngine/ClunkEngine/: Engine.h
ClunkEngine/ClunkEngine/ClAssets/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClAssets/ClAssets/: Asset.h  AssetRegistry.h
ClunkEngine/ClunkEngine/ClMath/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClMath/ClMath/: ClMath.h  HashHelper.h  Mat3.h  Mat4.cpp  Mat4.h  Quat.cpp  Quat.h  Transform3d.cpp  Transform3d.h  Vec2.h  Vec3.h  Vec4.h
ClunkEngine/ClunkEngine/ClPlatforms/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClPlatforms/ClPlatforms/: ClPlatform.h  ClPlatform_AxisMotionEvent.h  ClPlatform_ButtonEvent.h  ClPlatform_EventStatics.cpp  ClPlatform_EventStatics.h  ClPlatform_EventTypes.h  ClPlatform_IEvent.h  ClPlatform_SDL.cpp  ClPlatform_WindowEvent.h
ClunkEngine/ClunkEngine/ClRenderManager/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClRenderManager/ClRenderManager/: ClBitmap.h  ClCamera.h  ClCubemapUtils.cpp  ClCubemapUtils.h  ClIMeshComp.h  ClIRenderer.h  ClLayer.h  ClLayerStack.cpp  ClProjectionView.h  ClRenderContext.cpp  ClRenderContext.h  ClRenderManager.h
ClunkEngine/ClunkEngine/ClRenderManager/ClRenderManager/ClCamera/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClRenderManager/ClRenderManager/ClCamera/ClCamera/: ClCamera.cpp  ClCamera.h  ClFlyCameraMovement.h  ClProjection.h  ICameraMovement.h
ClunkEngine/ClunkEngine/ClScene/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClScene/ClScene/: ClScene.cpp  ClScene.h  ComponentRegistry.h  ECS.h  Entity.h  System.h
ClunkEngine/ClunkEngine/ClVulkanRenderer/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/: ClVk3dLayer.cpp  ClVk3dLayer.h  ClVkMesh.cpp  ClVkMesh.h  ClVkMeshComp.h  ClVkModelLayer.cpp  ClVkModelLayer.h  ClVkRenderLayerBase.cpp  ClVkRenderLayerBase.h  ClVkRenderer.cpp  ClVkRenderer.h  ClVkTransforms.h  ClVkVertex.h
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkBuffer/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkCmds/: CMakeLists.txt  ClVkCmds.vcxproj  ClVkCmds.vcxproj.filters  cmake_install.cmake
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkCmds/ClVkCmds/: ClVkCmdPools.cpp  ClVkCmdPools.h
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkContext/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkContext/ClVkExt/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkContext/src/: ClVkContext.cpp  ClVkMemAllocator.cpp  ClVkPhysicalDevice.cpp  ClVkQueueFamilies.cpp  ClVkValidationLayers.cpp
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkDescriptor/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkDescriptor/ClVkDescriptor/: ClVkDescriptorPool.cpp  ClVkDescriptorPool.h  ClVkDescriptorSet.cpp  ClVkDescriptorSet.h  ClVkDescriptorSetLayout.cpp  (+1 more)
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkImage/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkPipeline/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkRenderLayers/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVkSwapchain/: CMakeLists.txt
ClunkEngine/ClunkEngine/ClVulkanRenderer/ClVulkanRenderer/ClVulkan/: CMakeLists.txt
ClunkEngine/ClunkEngine/Core/: CMakeLists.txt
ClunkEngine/ClunkEngine/Core/Core/: Application.cpp  Application.h  EntryPoint.h  Exception.cpp  Exception.h  KeyCodes.cpp  KeyCodes.h  Logger.cpp  Logger.h  Object.h  Resource.h  ResourceManager.cpp  ResourceManager.h  TypeId.h
ClunkEngine/ClunkEngine/Defines/: CMakeLists.txt
ClunkEngine/ClunkEngine/Defines/Defines/: Defines.cpp  Defines.h
ClunkEngine/ClunkEngine/Events/: CMakeLists.txt
ClunkEngine/ClunkEngine/Events/Events/: EventDataTypes.h  IEvent.h  KeyEvent.cpp  MouseButtonEvent.h  MouseButtonListener.h  MouseEvents.cpp  MouseEvents.h  MouseMoveEvent.h  WindowEvent.h  WindowEvents.cpp  WindowListener.h
ClunkEngine/ClunkEngine/PCH/: CMakeLists.txt
ClunkEngine/ClunkEngine/PCH/PCH/: pch.cpp  pch.h
ClunkyEditor/: CMakeLists.txt
ClunkyEditor/ClunkyEditor/: SandBox.cpp  SandBox.h
Engine/: CMakeLists.txt
Engine/Engine/: Engine.h
Engine/Engine/ClMath/: CMakeLists.txt
Engine/Engine/ClMath/ClMath/: ClMath.h  Mat3.cpp  Mat4.cpp  Quat.h  Transform3d.h  Vec2.h  Vec3.h  Vec4.h
Engine/Engine/ClPlatforms/: CMakeLists.txt
Engine/Engine/ClPlatforms/ClPlatforms/: ClPlatform.h
Engine/Engine/ClRenderManager/: CMakeLists.txt
Engine/Engine/ClRenderManager/ClRenderManager/: ClIMeshComp.h  ClIRenderer.h  ClLayerStack.h  ClRenderContext.cpp  ClRenderContext.h  ClRenderManager.h  ClSceneManager.cpp  ClSceneManager.h
Engine/Engine/ClVulkanRenderer/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/: ClVkMeshComp.cpp  ClVkRenderer.cpp  ClVkRenderer.h  ClVkTransforms.h  ClVkVertex.h
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkBuffer/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkCmds/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkContext/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkImage/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkPipeline/: CMakeLists.txt
Engine/Engine/ClVulkanRenderer/ClVulkanRenderer/ClVkSwapchain/: CMakeLists.txt
Engine/Engine/Core/: CMakeLists.txt
Engine/Engine/Core/Core/: Application.cpp  Application.h  EntryPoint.h  Exception.cpp  Exception.h  KeyCodes.h  Logger.cpp  Logger.h  ResourceManager.cpp  Timer.h
Engine/Engine/Defines/: CMakeLists.txt
Engine/Engine/Defines/Defines/: Defines.h
Engine/Engine/Events/: CMakeLists.txt
Engine/Engine/Events/Events/: KeyEvent.h  KeyEvents.cpp  KeyEvents.h  KeyListener.h  MouseButtonEvent.cpp  MouseButtonEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  MouseMoveListener.h  WindowEvent.cpp  WindowEvent.h  WindowEvents.h
Engine/Engine/PCH/PCH/: pch.h
(+235 files in other folders)
